# ADS_MPI

./: .gitignore  ADS.F90  CMakeLists.txt  Doxyfile  GNUmakefile  Makefile  README  README.md  RHS_eq.F90  _GNUmakefile  analysis.F  analysis.F90  basis.F  basis.F90  communicators.F  communicators.F90  communicators.F_2D  communicators.F_XYZ  core.F90  create_communicators.F  create_communicators.F90  create_communicators.F_2D  create_communicators.F_ALL  create_communicators.F_XYZ  debug.F90  doxygen.conf  gauss.F  gauss.F90  gnuplot.F90  gnuplot.py  input_data.F  input_data.F90  input_data.f  int2str.F  int2str.F90  knot_vector.F90  m_files  m_options_intel  m_options_parallel  main.F  (+28 more)
fruit/: rake_base.rb
lapack/: netlibfiles.tar
mymake/: fort.1  m_files  m_options  m_options_gfortran  m_options_intel  makefile
problems/L2Projection/: RHS_eq.F90  input_data.F90  main.F90
problems/eriksson/: RHS_eq.F90  input_data.F90  main.F90
problems/heat/: RHS_eq.F90  input_data.F90  main.F90
problems/igrm_L2Projection/: RHS_fun.F90  main.F90
problems/oil/: RHS_eq.F90  input_data.F90  main.F90  main.F95
problems/pure_diffusion_igrm/: RHS_eq.F90  input_data.F90  main.F90
src/: ADS.F90  GNUmakefile  Interfaces.F90  RHS_eq.F90  RHS_interface.F90  Setup.F90  analysis.F90  analysis.F95  basis.F90  communicators.F90  debug.F90  gauss.F90  gnuplot.F90  int2str.F90  knot_vector.F90  math.F90  math.F95  my_mpi.F90  parallelism.F90  plot.F90  projection_engine.F90  projection_engine.F95  reorderRHS.F90  reorderRHS.F95  sparse.F90  syscom.blk  utils.F90  vtk.F90  vtk.F95
test/: fruit_driver.F90  knot_vector.F90  knot_vector_test.F90  makefile  rakefile  test_utils.F90
tests/: GNUmakefile  testSuites.inc  test_knot.pf  tests.pf
